--- a/assets/locale/i18n_en.json
+++ b/assets/locale/i18n_en.json
@@ -9,5 +9,6 @@
   "success": "Success",
   "get_data": "Get Data",
   "something_went_wrong": "Something went wrong",
-  "ok": "Ok"
+  "ok": "Ok",
+  "login": "LOGIN"
 }
