--- a/assets/locale/i18n_it.json
+++ b/assets/locale/i18n_it.json
@@ -9,5 +9,6 @@
   "success": "Success",
   "get_data": "Prendi Data",
   "something_went_wrong": "Qualcosa è andato storto",
-  "ok": "Ok"
+  "ok": "Ok",
+  "login": "LOGIN"
 }
